--- a/PlantillaOpenGL/PlantillaOpenGL.vcxproj
+++ b/PlantillaOpenGL/PlantillaOpenGL.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{E121095E-221F-4BD3-A508-FD997EAFFB21}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>PlantillaOpenGL</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectName>ShadersOpenGL</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -157,6 +157,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Vertice.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PlantillaOpenGL.cpp" />
